spring-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-api
spec:
  selector:
    app: spring-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
